--- a/vue-project/package.json
+++ b/vue-project/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fullcalendar/core": "^6.1.17",
+    "@fullcalendar/daygrid": "^6.1.17",
+    "@fullcalendar/vue3": "^6.1.17",
     "axios": "^1.8.4",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
