--- a/vue-project/package.json
+++ b/vue-project/package.json
@@ -18,7 +18,9 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
+    "@vue/test-utils": "^2.4.6",
     "vite": "^6.2.1",
-    "vite-plugin-vue-devtools": "^7.7.2"
+    "vite-plugin-vue-devtools": "^7.7.2",
+    "vite-tsconfig-paths": "^5.1.4"
   }
 }
